--- a/index.css
+++ b/index.css
@@ -3,8 +3,8 @@ body {
     text-align: center;
 }
 
-p1 { 
-    font-size: 700px;
+p { 
+    font-size: 30px;
     color: blue;
     font-family: cursive;
 }
